--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -15,6 +15,17 @@ services:
     expose:
       - 8000
     env_file: .env
+    depends_on:
+      - db
+
+  db:
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - .env.prod.db
+
+
   nginx:
     build:
       context: ./nginx
@@ -30,5 +41,6 @@ services:
       - web
 
 volumes:
+  postgres_data:
   static_volume:
   media_volume:
