--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           echo ::set-env name=WEB_IMAGE::${{ env.WEB_IMAGE }}
           echo ::set-env name=NGINX_IMAGE::${{ env.NGINX_IMAGE }}
-          echo ::set-env name=DB_IMAGE::${{ env.NGINX_IMAGE }}
+          echo ::set-env name=DB_IMAGE::${{ env.DB_IMAGE }}
       - name: Log in to GitHub Packages
         run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
         env:
