--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: Continuous Integration and Delivery
 on: [push]
 
 env:
-  WEB_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/web
+  WEB_IMAGE:   docker.pkg.github.com/$GITHUB_REPOSITORY/web
   NGINX_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/nginx
-  DB_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/db
+  DB_IMAGE:    docker.pkg.github.com/$GITHUB_REPOSITORY/db
 
 jobs:
 
@@ -30,7 +30,7 @@ jobs:
         run: |
           echo ::set-env name=WEB_IMAGE::${{ env.WEB_IMAGE }}
           echo ::set-env name=NGINX_IMAGE::${{ env.NGINX_IMAGE }}
-          echo ::set-env name=DB_IMAGE::${{ env.NGINX_IMAGE }}
+          echo ::set-env name=DB_IMAGE::${{ env.DB_IMAGE }}
       - name: Log in to GitHub Packages
         run: echo ${GITHUB_TOKEN} | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
         env:
