--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -19,7 +19,11 @@ services:
       - db
 
   db:
-    image: postgres:12.0-alpine
+    build:
+      context: ./postgresql
+      cache_from:
+        - "${DB_IMAGE}"
+    image: "${DB_IMAGE}"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
