--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,3 +48,48 @@ jobs:
           docker push ${{ env.WEB_IMAGE }}
           docker push ${{ env.NGINX_IMAGE }}
           docker push ${{ env.DB_IMAGE }}
+
+
+deploy:
+  name: Deploy to My cloud server
+  runs-on: ubuntu-latest
+  needs: build
+  steps:
+    - name: Checkout master
+      uses: actions/checkout@v1
+    - name: Add environment variables to .env
+      run: |
+        echo DEBUG=0 >> .env
+        echo SQL_ENGINE=django.db.backends.postgresql >> .env
+        echo DATABASE=postgres >> .env
+        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
+        echo SQL_DATABASE=${{ secrets.SQL_DATABASE }} >> .env
+        echo SQL_USER=${{ secrets.SQL_USER }} >> .env
+        echo SQL_PASSWORD=${{ secrets.SQL_PASSWORD }} >> .env
+        echo SQL_HOST=${{ secrets.SQL_HOST }} >> .env
+        echo SQL_PORT=${{ secrets.SQL_PORT }} >> .env
+        echo WEB_IMAGE=${{ env.WEB_IMAGE }} >> .env
+        echo NGINX_IMAGE=${{ env.NGINX_IMAGE }} >> .env
+        echo DB_IMAGE=${{ env.DB_IMAGE }} >> .env
+    - name: Add the private SSH key to the ssh-agent
+      env:
+        SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+      run: |
+        mkdir -p ~/.ssh
+        ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+        ssh-add - <<< "${{ secrets.PRIVATE_KEY }}"
+    - name: Build and deploy images on AnyCloudServer
+      env:
+        SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+      run: |
+        scp  -o StrictHostKeyChecking=no -r ./.env ./docker-compose.prod.yml root@${{ secrets.CLOUD_SERVER_IP_ADDRESS }}:/app
+        ssh -o StrictHostKeyChecking=no root@${{ secrets.CLOUD_SERVER_IP_ADDRESS }} << 'ENDSSH'
+          cd /app
+          source .env
+          docker login docker.pkg.github.com -u jonndoe -p 60bc14d53c73671571598959dc72e51bc2dc7df8
+          docker pull $WEB_IMAGE
+          docker pull $NGINX_IMAGE
+          docker pull $DB_IMAGE
+          docker-compose -f docker-compose.prod.yml up -d
+        ENDSSH
