--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,38 +1,39 @@
-version: '3.7'
+
+version: "3.7"
 
 services:
   web:
-    build:
-      context: ./app
-      dockerfile: Dockerfile.prod
+    image: "${WEB_IMAGE}"
     command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles
-    expose:
-      - 8000
-    env_file:
-      - ./.env.prod
+      - static_volume:/usr/src/app/staticfiles
+      - media_volume:/usr/src/app/mediafiles
+    ports:
+      - 8000:8000
+    env_file: .env
     depends_on:
       - db
+
   db:
-    image: postgres:12.0-alpine
+    image: "${DB_IMAGE}"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.prod.db
-  
+      - .env.prod.db
+
   nginx:
-    build: ./nginx
+    image: "${NGINX_IMAGE}"
     volumes:
-      - static_volume:/home/app/web/staticfiles
-      - media_volume:/home/app/web/mediafiles  
+      - static_volume:/usr/src/app/staticfiles
+      - media_volume:/usr/src/app/mediafiles
     ports:
-      - 1337:80
+      - 80:80
     depends_on:
       - web
 
+
+
 volumes:
-  postgres_data:
   static_volume:
   media_volume:
+  postgres_data:
