--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,10 @@ services:
     volumes:
       - static_volume:/usr/src/app/staticfiles
       - media_volume:/usr/src/app/mediafiles
-    ports:
-      - 8000:8000
+    #ports:
+     # - 8000:8000
+    expose:
+      - 8000
     env_file: .env
     depends_on:
       - db
