--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -26,8 +26,7 @@ services:
     image: "${DB_IMAGE}"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - .env.prod.db
+    env_file: .env.prod.db
 
 
   nginx:
