--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,8 +26,8 @@ services:
   nginx:
     image: "${NGINX_IMAGE}"
     volumes:
-      - static_volume:/usr/src/app/staticfiles
-      - media_volume:/usr/src/app/mediafiles
+      - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/mediafiles
     ports:
       - 80:80
     depends_on:
