--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,8 @@ services:
     image: "${WEB_IMAGE}"
     command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - static_volume:/usr/src/app/staticfiles
-      - media_volume:/usr/src/app/mediafiles
+      - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/mediafiles
     #ports:
      # - 8000:8000
     expose:
